Added asset loading.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
         "asar",
-        "relocator"
+        "Blackshark",
+        "Hsutungyu",
+        "LOCALAPPDATA",
+        "relocator",
+        "Tekk",
+        "Vectorslab"
     ]
 }
