Only allow one settings window at a time. Add screenshots to readme.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "asar",
         "Blackshark",
+        "fullscreenable",
         "Hsutungyu",
         "LOCALAPPDATA",
         "relocator",
