Refactor, small visual update, readme update.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "cSpell.words": [
         "asar",
         "Blackshark",
+        "Dreamstale",
         "fullscreenable",
         "Hsutungyu",
         "LOCALAPPDATA",
         "relocator",
+        "sanraith",
         "Tekk",
         "Vectorslab"
     ]
