Issue #1: Add support for Razer Synapse 4. - Add tooltips for settings - Update README

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,10 @@
         "LOCALAPPDATA",
         "relocator",
         "sanraith",
+        "systray",
+        "systrayv",
         "Tekk",
+        "tooltiptext",
         "Vectorslab"
     ]
 }
